tests/spec/desugar/snapshots/pipeline_chained_with_partial_application.snap
---
source: tests/spec/desugar/mod.rs
description: "fn test() { x |> add(5) |> multiply(2); }"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 3,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Call {
                        expression: Identifier {
                            value: "multiply",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 27,
                                byte_length: 8,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            Call {
                                expression: Identifier {
                                    value: "add",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 17,
                                        byte_length: 3,
                                    },
                                    resolution: Unresolved,
                                },
                                args: [
                                    Identifier {
                                        value: "x",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 12,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    Literal {
                                        literal: Integer {
                                            value: 5,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 21,
                                            byte_length: 1,
                                        },
                                    },
                                ],
                                spread: None,
                                type_arguments: None,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 12,
                                    byte_length: 11,
                                },
                                call_kind: Unresolved,
                            },
                            Literal {
                                literal: Integer {
                                    value: 2,
                                    text: None,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 36,
                                    byte_length: 1,
                                },
                            },
                        ],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 26,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 10,
                    byte_length: 31,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 0,
            byte_length: 41,
        },
    },
]
