tests/spec/desugar/snapshots/pipeline_in_block.snap
---
source: tests/spec/desugar/mod.rs
description: |
  
  fn test() {
    {
      let x = 5;
      x |> double
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Block {
            items: [
                Block {
                    items: [
                        Let {
                            binding: Binding {
                                pattern: Identifier {
                                    identifier: "x",
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 25,
                                        byte_length: 1,
                                    },
                                },
                                annotation: None,
                                typed_pattern: None,
                                ty: Var {
                                    id: uninferred,
                                },
                            },
                            value: Literal {
                                literal: Integer {
                                    value: 5,
                                    text: None,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 29,
                                    byte_length: 1,
                                },
                            },
                            mut_span: None,
                            else_block: None,
                            else_span: None,
                            assert: false,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 21,
                                byte_length: 9,
                            },
                        },
                        Call {
                            expression: Identifier {
                                value: "double",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 41,
                                    byte_length: 6,
                                },
                                binding_id: None,
                                qualified: None,
                            },
                            args: [
                                Identifier {
                                    value: "x",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 36,
                                        byte_length: 1,
                                    },
                                    binding_id: None,
                                    qualified: None,
                                },
                            ],
                            spread: None,
                            type_arguments: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 36,
                                byte_length: 11,
                            },
                            call_kind: None,
                        },
                    ],
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 15,
                        byte_length: 36,
                    },
                },
            ],
            ty: Var {
                id: uninferred,
            },
            span: Span {
                file_id: 0,
                byte_offset: 11,
                byte_length: 42,
            },
        },
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 52,
        },
    },
]
