tests/spec/desugar/snapshots/pipeline_in_format_string.snap
---
source: tests/spec/desugar/mod.rs
description: "fn test() { let x = 5; f\"result: {x |> double}\"; }"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 3,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 16,
                                    byte_length: 1,
                                },
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 5,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 20,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 9,
                        },
                    },
                    Literal {
                        literal: FormatString(
                            [
                                Text(
                                    "result: ",
                                ),
                                Expression(
                                    Call {
                                        expression: Identifier {
                                            value: "double",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 39,
                                                byte_length: 6,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [
                                            Identifier {
                                                value: "x",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 34,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                        ],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 34,
                                            byte_length: 11,
                                        },
                                        call_kind: None,
                                    },
                                ),
                            ],
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 23,
                            byte_length: 24,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 10,
                    byte_length: 40,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 0,
            byte_length: 50,
        },
    },
]
