tests/spec/desugar/snapshots/pipeline_multiple_in_function.snap
---
source: tests/spec/desugar/mod.rs
description: |
  
  fn test() {
    let a = x |> double;
    let b = y |> triple;
    a + b
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "a",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 1,
                                },
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Call {
                            expression: Identifier {
                                value: "double",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 28,
                                    byte_length: 6,
                                },
                                resolution: Unresolved,
                            },
                            args: [
                                Identifier {
                                    value: "x",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 23,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                            ],
                            spread: None,
                            type_arguments: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 23,
                                byte_length: 11,
                            },
                            call_kind: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 19,
                        },
                    },
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "b",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 42,
                                    byte_length: 1,
                                },
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Call {
                            expression: Identifier {
                                value: "triple",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 51,
                                    byte_length: 6,
                                },
                                resolution: Unresolved,
                            },
                            args: [
                                Identifier {
                                    value: "y",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 46,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                            ],
                            spread: None,
                            type_arguments: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 46,
                                byte_length: 11,
                            },
                            call_kind: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 38,
                            byte_length: 19,
                        },
                    },
                    Binary {
                        operator: Addition,
                        left: Identifier {
                            value: "a",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 61,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        right: Identifier {
                            value: "b",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 65,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 61,
                            byte_length: 5,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 57,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 67,
        },
    },
]
